<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actionLay">

        <GridView
            android:id="@+id/WorkImageGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            android:gravity="center"
            android:horizontalSpacing="@dimen/_5sdp"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/_7sdp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/sAccessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:fontFamily="@font/mfont"
            android:gravity="center"
            android:text="@string/wapp_permission"
            android:textColor="@color/startcolor"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:background="@drawable/btn_orange"
            android:fontFamily="@font/mfont"
            android:gravity="center"
            android:text="@string/allow_storage_access"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_38sdp"
            android:foreground="?selectableItemBackground"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/btn_wa"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_4sdp">

            <CheckBox
                android:id="@+id/selectAll"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/select_all"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/downloadIV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/btn_wa"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:foreground="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_4sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/ic_save"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteIV"
            android:layout_width="0dp"
            android:foreground="?selectableItemBackground"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/btn_wa"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_4sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/delete"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/loader_lay" />

    <include layout="@layout/empty_lay" />
</RelativeLayout>
