<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StoryDownloader.VhiFullViewActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/sptxtcolor">

        <ImageView
            android:id="@+id/im_close"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:adjustViewBounds="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/_9sdp"
            android:src="@drawable/ic_back" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toRightOf="@id/im_close"
            android:fontFamily="@font/mfont_medium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp">

        </androidx.appcompat.widget.AppCompatTextView>

    </RelativeLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adFrameMini"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" />


            <LinearLayout
                android:id="@+id/lnr_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:visibility="gone">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/imWhatsappShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/whatsapp"

                        app:backgroundTint="@color/white"
                        app:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imWhatsappShare"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/whatsapp"
                        android:textColor="@color/white"
                        android:visibility="visible" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/imShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_shareold"
                        app:backgroundTint="@color/dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imShare"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/mfont_medium"
                        android:text="share"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:visibility="visible" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:visibility="gone">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/imDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/delete_black_24dp"

                        app:backgroundTint="#fff"
                        app:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imDelete"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/delete"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:visibility="visible" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        layout="@layout/layout_ad_mini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />


</RelativeLayout>