<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StoryDownloader.VhiInstagramActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adFrameMini"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorMain">

            <ImageView
                android:id="@+id/imBack"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_centerVertical="true"
                android:foreground="?selectableItemBackground"
                android:padding="@dimen/_9sdp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toRightOf="@id/imBack"
                android:fontFamily="@font/mfont_medium"
                android:text="Instagram"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:id="@+id/TVTitle"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_alignParentRight="true"
                android:foreground="?selectableItemBackground"
                android:padding="@dimen/_15sdp"
                android:src="@drawable/insta_logo"
                app:tint="@color/white" />

        </RelativeLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="vertical">

                    <include layout="@layout/layout_ad_large" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/top_insta" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:fontFamily="@font/mfont_medium"
                    android:text="Instagram Vide Downloader"
                    android:textColor="@color/startcolor"
                    android:textSize="@dimen/_15ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:fontFamily="@font/mfont"
                    android:lineSpacingExtra="@dimen/_2sdp"

                    android:text="If you want save Video / Photo/Story/Reels from Instagram and IGTV to your phone, or REPOST with captions and hashtags to get more followers or SHARE to your friends via Instagram, Video Downloader for Instagram (Instamigo) should be your choice!"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_9ssp" />

                <RelativeLayout
                    android:id="@+id/RLLoginInstagram"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/btn_gradient"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tvLoginInstagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:fontFamily="@font/mfont_medium"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/download_from_private_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/SwitchLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tvLoginInstagram"
                        android:clickable="false"
                        android:gravity="center"
                        android:text=""
                        android:theme="@style/SCBSwitch" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RLEdittextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/et_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@drawable/link_bg"
                        android:drawableLeft="@drawable/pastlogo"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/white"
                        android:fontFamily="@font/mfont_medium"
                        android:hint="@string/paste_link"
                        android:padding="13dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/_11ssp" />


                    <LinearLayout
                        android:id="@+id/RLDownloadLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_text"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <!-- <androidx.appcompat.widget.AppCompatImageView


                                android:layout_margin="@dimen/_10sdp"
                                android:adjustViewBounds="true"
                                android:foreground="?selectableItemBackground"
                                 />-->

                        <LinearLayout
                            android:id="@+id/img_paste"
                            android:layout_width="@dimen/_130sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:background="@drawable/link_paste_bg"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_18sdp"
                                android:layout_height="@dimen/_18sdp"
                                android:src="@drawable/paste" />


                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:fontFamily="@font/mfont_medium"
                                android:text="Paste"
                                android:textColor="@color/sptxtcolor"
                                android:textSize="@dimen/_12ssp" />


                        </LinearLayout>


                        <!-- <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_10sdp"
                                android:adjustViewBounds="true"
                                android:foreground="?selectableItemBackground"
                                />-->

                        <LinearLayout
                            android:id="@+id/login_btn1"

                            android:layout_width="@dimen/_130sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/link_bg"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="@dimen/_18sdp"
                                android:layout_height="@dimen/_18sdp"
                                android:src="@drawable/dw" />


                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:fontFamily="@font/mfont_medium"
                                android:text="Download"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/_12ssp" />


                        </LinearLayout>


                    </LinearLayout>


                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lnr_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">


                    <LinearLayout
                        android:id="@+id/login_lin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvViewStories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:fontFamily="@font/mfont_medium"
                            android:text="@string/view_stories"
                            android:textColor="@color/startcolor"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvLogin"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_below="@+id/RLM"
                            android:layout_margin="5dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/btn_all"
                            android:fontFamily="@font/mfont_medium"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/RVUserList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:nestedScrollingEnabled="false" />

                    <ProgressBar
                        android:id="@+id/pr_loading_bar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/dark"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/RVStories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:nestedScrollingEnabled="false" />


                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <include
        layout="@layout/layout_ad_mini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />


</RelativeLayout>